# chatGPT-rust

./: CONTRIBUTING.md  Cargo.toml  README.MD  README.md
git/: v0.1.0s_fix.rs
log/: log_1679372904336_USER.json  log_1679372914851_GPT3.json  log_1679372921160_USER.json  log_1679372931780_GPT3.json  log_1679372993580_USER.json  log_1679373028487_GPT3.json  log_1679373040367_USER.json  log_1679373054933_GPT3.json  log_1680705416207_USER.json
src/: main.rs
src/git/: v0.0.1.rs  v0.0.1_fix.rs  v0.0.2.rs  v0.0.3.rs  v0.1.0.rs  v0.1.0_fix.rs  v0.1.0s.rs  v0.1.0s_fix.rs  v0.1.1s.rs
src/git/v0.1.1/: lib.rs  main.rs
