[package]
name = "chatgpt-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
text_io = "0.1.9"
rodio = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.13.0"
bincode = "1.3.3"
ndarray = "0.12.0"

[dependencies.uuid]
version = "1.3.0"
features = ["v4"]
